# classhub

./: .gitignore  Pipfile  build.sh  manage.py  prod-manage.py  pyproject.toml  render.yaml
STUDENTSATTENDANCE/: asgi.py  settings.py  urls.py
STUDENTSATTENDANCE/config/: urls.py  wsgi.py
attendance/: admin.py  forms.py  models.py
attendance/api/: serializers.py  urls.py  views.py
attendance/migrations/: 0001_initial.py  0002_initial.py  0002_studentattendance.py  0003_remove_class_class_uid_and_more.py  0003_studentattendance_attendance_uid.py  0004_alter_studentattendance_attendance_created_and_more.py  0004_class_class_uid.py  0006_rename_class_grade_alter_grade_options.py  0010_alter_grade_grade.py
backend/: Pipfile  Procfile  manage.py  prod-manage.py  pyproject.toml  render.yaml  requirements.txt
backend/CLASSHUB/config/: asgi.py  wsgi.py
backend/CLASSHUB/config/settings/: base.py  dev.py  prod.py
backend/STUDENTSATTENDANCE/config/: urls.py
backend/STUDENTSATTENDANCE/config/settings/: base.py
backend/attendance/: admin.py
backend/attendance/api/: urls.py  views.py
backend/attendance/migrations/: 0005_rename_attendance_created_studentattendance_created_and_more.py  0007_alter_grade_grade.py  0008_alter_grade_options.py  0009_alter_grade_grade.py
backend/jstoolchain/: tailwind.config.js
backend/static/css/tailwind/: global-styles.css  global.css
backend/student/: admin.py
backend/student/api/: serializers.py  urls.py
backend/student/migrations/: 0001_initial.py  0002_remove_student_student_uid.py
backend/teacher/: admin.py
backend/teacher/api/: urls.py  views.py
backend/teacher/migrations/: 0004_teacher_grade.py
backend/templates/home/: index.html
backend/users/: admin.py  apps.py  models.py
backend/users/api/: serializers.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_user_uid.py  0005_alter_user_is_superuser.py
flowcharts/: model-structures.drawio
frontend/: index.html  package-lock.json  package.json  urls.py  views.py  webpack.config.js
frontend/src/: App.js  App.jsx  HomePage.js  HomePage.jsx
home/: urls.py  views.py
jstoolchain/: package-lock.json  package.json  tailwind.config.js
student/: admin.py  models.py
student/api/: serializers.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_student_grade.py  0003_student_student_uid.py  0004_alter_student_last_name_alter_student_middle_name.py
teacher/: models.py
teacher/api/: serializers.py
teacher/migrations/: 0001_initial.py  0002_teacher_user.py  0003_alter_teacher_cell_number_alter_teacher_email_and_more.py
users/: models.py  signals.py
users/api/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_groups_alter_user_user_permissions.py  0003_user_date_joined.py  0004_alter_user_email.py  0004_alter_user_is_superuser.py
(+73 files in other folders)
