[tool.poetry]
name = "students-attendance"
version = "1.0.0"
description = "Students attendance web application"
authors = ["Gabriel Rockson <thegabrielrockson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-extensions = "^3.1.5"
ipython = "^8.2.0"
psycopg2-binary = "^2.9.3"
waitress = "^2.1.1"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
Werkzeug = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
